--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3457,7 +3457,7 @@ input, select, textarea {
 		background-image: url("../../images/somerandommun.jpg");
 		background-position: center center;
 		background-size: cover;
-		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.25);
+		box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.037);
 		min-height: 100vh;
 		position: relative;
 		text-align: center;
@@ -3524,6 +3524,7 @@ input, select, textarea {
 					border-radius: 100%;
 					display: block;
 					width: 100%;
+					height: 100%;
 					border: 2px solid gold !important;
 				}
 
@@ -3854,8 +3855,8 @@ input, select, textarea {
 					}
 
 					#banner .content .image {
-						height: 9em;
-						width: 9em;
+						height: 15em;
+						width: 15em;
 					}
 
 		/* Nav */
