--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3317,9 +3317,9 @@ input, select, textarea {
 /* Dropotron */
 
 	.dropotron {
-		background: rgba(39, 40, 51, 0.965);
+		background: #7d0404;
 		border-radius: 4px;
-		box-shadow: 0 0.075em 0.35em 0 rgba(0, 0, 0, 0.125);
+		box-shadow: 0 0.055em 0.35em 0 #d8a600;
 		list-style: none;
 		margin-top: calc(-0.25em + 1px);
 		min-width: 12em;
@@ -3327,7 +3327,7 @@ input, select, textarea {
 	}
 
 		.dropotron > li {
-			border-top: solid 1px rgba(255, 255, 255, 0.035);
+			border-top: solid 1px #7d0404;
 			padding: 0;
 		}
 
@@ -3357,7 +3357,7 @@ input, select, textarea {
 				-webkit-transform: rotate(45deg);
 				-ms-transform: rotate(45deg);
 				transform: rotate(45deg);
-				background: #272833;
+				background: #7d0404;
 				content: '';
 				display: block;
 				height: 1em;
@@ -3889,7 +3889,7 @@ input, select, textarea {
 				top: 0;
 				width: 100%;
 				z-index: 10001;
-				background: #272833;
+				background: #640404;
 				box-shadow: 0 0.125em 0.125em 0 rgba(0, 0, 0, 0.125);
 			}
 
