--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3465,6 +3465,21 @@ input, select, textarea {
 		text-align: center;
 		z-index: 21;
 	}
+	@media (max-width: 1000px) {
+		#banner {
+			background-attachment: fixed;
+			background-color: #640404;
+			background-image: url("../../images/potrait\ MUN\ logo.png");
+			background-position: center center;
+			background-size: cover;
+			box-shadow: 0 0.25em 0.5em 0 rgba(0, 0, 0, 0.037);
+			min-height: 100vh;
+			position: relative;
+			text-align: center;
+			z-index: 21;
+		}
+		
+	}
 
 		#banner:before {
 			content: '';
