--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -288,7 +288,7 @@ input, select, textarea {
 		}
 
 		99% {
-			color: #1c1d26;
+			color: #7d0404;
 			z-index: 100001;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -297,7 +297,7 @@ input, select, textarea {
 		}
 
 		100% {
-			color: #1c1d26;
+			color: #640404;
 			z-index: -1;
 			-moz-transform: scale(0.5) rotate(360deg);
 			-webkit-transform: scale(0.5) rotate(360deg);
@@ -593,7 +593,7 @@ input, select, textarea {
 			-webkit-animation: overlay-hide 1.5s ease-in forwards !important;
 			-ms-animation: overlay-hide 1.5s ease-in forwards !important;
 			animation: overlay-hide 1.5s ease-in forwards !important;
-			background: #1c1d26;
+			background: #400000;
 			content: '';
 			display: block;
 			height: 100%;
@@ -2154,7 +2154,7 @@ input, select, textarea {
 	}
 
 	header p {
-		color: #ffffff;
+		color: hwb(0 100% 0%);
 		position: relative;
 		margin: 0 0 1.5em 0;
 	}
@@ -3379,7 +3379,7 @@ input, select, textarea {
 
 	#header {
 		background: #640404;
-		box-shadow: 0 0 0.25em 0 rgba(0, 0, 0, 0.25);
+		box-shadow: 0 0 0.25em 0 #640404;
 		cursor: default;
 		height: 3.5em;
 		left: 0;
@@ -3690,7 +3690,7 @@ input, select, textarea {
 				}
 
 				.spotlight .content {
-					background-color: #1c1d26;
+					background-color: #640404;
 					border-width: 0 !important;
 					border-top-width: 0.35em !important;
 					bottom: auto !important;
