--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,9 @@ section, summary, time, mark, audio, video {
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;}
+.five{
+	font: EB garamond;
+}
 
 body {
 	line-height: 1;
